# ai-benchmark

./: .gitignore  CLEAN_STRUCTURE.md  CMakeLists.txt  CMakeLists_simple.txt  GEOMETRIC_KERNEL_ATTN_ADDED.md  README.md  SPCONV_EXTRACTION_SUMMARY.md  STRUCTURE_REORGANIZATION.md  check_test_data.py  mmapeak.cu  test_geometric_kernel_attn.py  test_indices_kernels  test_indices_kernels.cu  test_new_structure.py  test_nvidia_voxelization  test_nvidia_voxelization.cpp  test_pytorch_ops.py  test_sparse_conv  test_spconv_comparison  test_spconv_kernels
operators/: __init__.py
spconv-cuda-kernels/: .gitignore  BUILD_STATUS.md  CMakeLists.txt  README.md  build.sh
spconv-cuda-kernels/extracted_kernels/: README.md
spconv-cuda-kernels/extracted_kernels/include/: hash_kernels.h  indices_kernels.h  inference_kernels.h  maxpool_kernels.h  pointops_kernels.h  sparse_conv_core.h
spconv-cuda-kernels/extracted_kernels/kernels/: hash_kernels.cu  indices_kernels.cu  inference_kernels.cu  maxpool_kernels.cu  pointops_kernels.cu  sparse_conv_core.cu
spconv-cuda-kernels/libspconv/spconv_standalone/include/spconvlib/cumm/common/: TensorView.h  TensorViewCompileLinkFlags.h  TensorViewNVRTC.h
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/common/CompileInfo/: CompileInfo_arch_is_compiled.cc  CompileInfo_arch_is_compiled_gemm.cc  CompileInfo_get_compiled_cuda_arch.cc  CompileInfo_get_compiled_gemm_cuda_arch.cc
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m128n64k32m64n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m128n64k32m64n32k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m128n64k32m64n32k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n128k32m32n64k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n128k32m32n64k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n128k32m32n64k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n64k32m32n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n64k32m32n32k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f16f16tnt_m64n64k32m32n32k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m128n64k32m64n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m128n64k32m64n32k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m128n64k32m64n32k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n128k32m32n64k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n128k32m32n64k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n128k32m32n64k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n64k32m32n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n64k32m32n32k32A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f16f16f16f32f32tnt_m64n64k32m32n32k32A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m32n32k16m16n16k16A0T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m32n32k16m16n16k16A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m32n32k16m16n16k16A1T1688_300_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m32n32k16m16n16k16A1T1688_400_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/Ampere_f32f32f32f32f32tnt_m64n64k32m32n32k32A1T1688_200_C301LLL_SK/ConvKernel/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/conv/main/ConvMainUnitTest/: CMakeLists.txt
spconv-cuda-kernels/libspconv/spconv_standalone/src/spconvlib/cumm/gemm/main/GemmMainUnitTest/: CMakeLists.txt
spconv-cuda-kernels/tests/: CMakeLists.txt  generate_spconv_test_data.py  test_accuracy_final.py  test_libspconv_accuracy.cpp  test_simple_libspconv.cpp  test_sparse_conv.cu  test_spconv_accuracy.py  test_spconv_comparison.cu  test_spconv_kernels.cu  verify_same_kernels.py
tma_experiments/: BENCHMARK_RESULTS.md  CURRENT_STATUS.md  HOPPER_TEST_GUIDE.md  MULTISTAGE_BUG_REPORT.md  (+72 more)
(+791 files in other folders)
